--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -92,6 +92,7 @@
         </ul>
       </section>
     </main>
+    <script type="module" src="./js/ProductDetails.mjs"></script>
 
     <footer>&copy;NOT a real business</footer>
   </body>
