--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,8 @@
     </section>
   </main>
   <footer>&copy;NOT a real business</footer>
+  <script type="module" src="/js/main.js"></script>
+
 </body>
 
 </html>
