--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Sleep Outside | Cedar Ridge Rimrock 2-person tent</title>
 
+    <!-- Lien vers la feuille de style -->
     <link rel="stylesheet" href="../css/style.css" />
 
-    <script src="../js/product.js" type="module"></script>
+    <!-- Script du fichier JavaScript pour gérer les produits -->
+    <script src="../js/product.js" type="module" defer></script>
 </head>
 
 <body>
@@ -74,9 +73,10 @@
             </div>
         </section>
     </main>
-    <script type="module" src="./js/ProductDetails.mjs"></script>
 
     <footer>&copy;NOT a real business</footer>
+    <script type="module" src="../js/productdetails.mjs"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
